fix(*): change scrollbar and size buttons for cards

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,6 +1,25 @@
 #root {
     margin: 0;
     padding: 0;
+    font-family: 'Inter', Courier, monospace;
+}
+
+&::-webkit-scrollbar {
+    width: '30px';
+    height: '10px';
+}
+
+&::-webkit-scrollbar-thumb {
+    background: 'red';
+    border-radius: '10px';
+}
+
+&::-webkit-scrollbar-thumb:hover {
+    background: 'red';
+}
+
+&::-webkit-scrollbar-track {
+    background: 'lightgray';
 }
 
 input::placeholder {
